--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,5 +1,6 @@
-@mixin flexbox($justify:flex-start,$align:start){
+@mixin flexbox($justify:flex-start,$align:start,$wrap:wrap){
     display: flex;
     justify-content: $justify;
     align-items: $align;
+    flex-wrap: $wrap ;
 }
